# editorconfig-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: docs.yml  test.yml
src/: bindings.rs  lib.rs
tests/: .editorconfig  .editorconfig.invalid  editorconfig_sys.rs
