[package]
name = "editorconfig-sys"
version = "0.1.3"
edition = "2021"
rust-version = "1.70.0"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>"]
homepage = "https://github.com/toblux/editorconfig-sys"
repository = "https://github.com/toblux/editorconfig-sys"
documentation = "https://docs.rs/editorconfig-sys"
description = "Raw FFI bindings to libeditorconfig"
readme = "README.md"
license = "MIT"
keywords = ["editorconfig", "libeditorconfig", "bindings", "ffi", "sys"]
categories = ["external-ffi-bindings"]
exclude = [".github"]
links = "editorconfig"
build = "build.rs"

[dev-dependencies]
rand = "0.9.0"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.29"

[features]
buildtime-bindgen = []
